more styling, initial JS to display button content on screen

--- a/index.html
+++ b/index.html
@@ -10,38 +10,39 @@
 <body>
     <div class="calcContainer">
         <div class=calcBody>
-            <div class="screen">
+            <div class="screenContainer">
+                <div class="screen"></div>
             </div>
             <div class="buttonContainer">
                 <div class="rowOne">
-                    <button></button>
-                    <button></button>
-                    <button></button>
-                    <button></button>
+                    <button class="clearButton">AC</button>
+                    <button class="inputButton">()</button>
+                    <button class="inputButton">%</button>
+                    <button class="inputButton">/</button>
                 </div>
                 <div class="rowTwo">
-                    <button></button>
-                    <button></button>
-                    <button></button>
-                    <button></button>
+                    <button class="inputButton">7</button>
+                    <button class="inputButton">8</button>
+                    <button class="inputButton">9</button>
+                    <button class="inputButton">x</button>
                 </div>
                 <div class="rowThree">
-                    <button></button>
-                    <button></button>
-                    <button></button>
-                    <button></button>
+                    <button class="inputButton">4</button>
+                    <button class="inputButton">5</button>
+                    <button class="inputButton">6</button>
+                    <button class="inputButton">-</button>
                 </div>
                 <div class="rowFour">
-                    <button></button>
-                    <button></button>
-                    <button></button>
-                    <button></button>
+                    <button class="inputButton">1</button>
+                    <button class="inputButton">2</button>
+                    <button class="inputButton">3</button>
+                    <button class="inputButton">+</button>
                 </div>
                 <div class="rowFive">
-                    <button></button>
-                    <button></button>
-                    <button></button>
-                    <button></button>
+                    <button class="inputButton">0</button>
+                    <button class="inputButton">.</button>
+                    <button class="inputButton"><</button>
+                    <button>=</button>
                 </div>
             </div>
         </div>
