--- a/index.html
+++ b/index.html
@@ -15,34 +15,34 @@
             </div>
             <div class="buttonContainer">
                 <div class="rowOne">
-                    <button class="clearButton">AC</button>
-                    <button class="inputButton">()</button>
-                    <button class="inputButton">%</button>
-                    <button class="inputButton">/</button>
+                    <button class="buttonClear">AC</button>
+                    <button class="buttonTBD">()</button>
+                    <button class="buttonOperator">%</button>
+                    <button class="buttonOperator">/</button>
                 </div>
                 <div class="rowTwo">
-                    <button class="inputButton">7</button>
-                    <button class="inputButton">8</button>
-                    <button class="inputButton">9</button>
-                    <button class="inputButton">x</button>
+                    <button class="buttonNumber">7</button>
+                    <button class="buttonNumber">8</button>
+                    <button class="buttonNumber">9</button>
+                    <button class="buttonOperator">x</button>
                 </div>
                 <div class="rowThree">
-                    <button class="inputButton">4</button>
-                    <button class="inputButton">5</button>
-                    <button class="inputButton">6</button>
-                    <button class="inputButton">-</button>
+                    <button class="buttonNumber">4</button>
+                    <button class="buttonNumber">5</button>
+                    <button class="buttonNumber">6</button>
+                    <button class="buttonOperator">-</button>
                 </div>
                 <div class="rowFour">
-                    <button class="inputButton">1</button>
-                    <button class="inputButton">2</button>
-                    <button class="inputButton">3</button>
-                    <button class="inputButton">+</button>
+                    <button class="buttonNumber">1</button>
+                    <button class="buttonNumber">2</button>
+                    <button class="buttonNumber">3</button>
+                    <button class="buttonOperator">+</button>
                 </div>
                 <div class="rowFive">
-                    <button class="inputButton">0</button>
-                    <button class="inputButton">.</button>
-                    <button class="inputButton"><</button>
-                    <button>=</button>
+                    <button class="buttonNumber">0</button>
+                    <button class="buttonNumber">.</button>
+                    <button class="buttonTBD"></button>
+                    <button class="buttonEquals">=</button>
                 </div>
             </div>
         </div>
