recolor AC button

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
     <script src="calc.js" defer></script>
 </head>
@@ -16,8 +16,7 @@
             <div class="buttonContainer">
                 <div class="rowOne">
                     <button class="buttonClear">AC</button>
-                    <button class="buttonTBD">()</button>
-                    <button class="buttonOperator">%</button>
+                    <button class="buttonBackspace"><</button>
                     <button class="buttonOperator">/</button>
                 </div>
                 <div class="rowTwo">
